# SP

./: .gitignore  README_installer.md  aligner.py  embedder.py  environment.yml  gpu_info.py  input_s.xlsx  io_manager.py  main.py  output_s.xlsx  pipeline_kkma.ipynb  processor.py  punctuation.py  pyproject.toml  readme.md  requirements.txt  test_input.xlsx  test_output.xlsx  test_pipeline.py  tester.ipynb  tokenizer.py
.history/: readme_20250618163731.md  readme_20250619170109.md  readme_20250619170204.md  readme_20250619170243.md  readme_20250619170252.md  readme_20250619170300.md  readme_20250619171717.md  readme_20250621011530.md
.history/sa/: aligner_20250620160305.py  aligner_20250620162807.py  aligner_20250620163409.py  aligner_20250620172758.py  aligner_20250620172813.py  (+91 more)
core/: aligner.py  alignment_functions.py  io_utils.py  processor.py  punctuation.py  sentence_splitter.py  tokenizers.py
pa/: 2.6.0  aligner.py  aligner_correct.py  analyze_sa.py  environment.yml  input.xlsx  main.py  mecab_jieba_utils.py  output.xlsx  output_p.xlsx  pa_gui.py  processor.py  requirements.txt  sentence_splitter.py  unified_aligner.py  vecsplit02.py
sa/: aligner.py  environment.yml  input01.xlsx  input02.xlsx  io_manager.py  io_utils.py  main.py  manual_split_test.py  output.xlsx  output01.xlsx  output01_bge.xlsx  output01_new.xlsx  output01_new_phrase.xlsx  output01_openai.xlsx  output01_phrase.xlsx  output02.xlsx  output02_phrase.xlsx  processor.py  punctuation.py  requirements.txt  requirements.txt#  sa_gui.py  split_auto_test.py  tester.ipynb  ~$output.xlsx
split_p/: input_p.xlsx  output_p.xlsx  vecsplit01.ipynb  vecsplit02.py
split_s/: embedder_hf.py  io_manager.py  output_s.xlsx  pipeline_soy.ipynb  readme.md  tokenizer_soy.py
(+162 files in other folders)
