[tool.poetry]
name = "csp"
version = "0.1.0"
description = "Multilingual NLP project with Korean/Chinese support"
authors = ["hw725 <hw725@g.skku.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.11"

# 데이터 처리 및 분석
pandas = ">=1.3.0"
numpy = ">=1.21.0,<2.0.0"  # numpy 2.0 호환성 문제로 제한
openpyxl = ">=3.0.0"
scipy = "*"

# 유틸리티
regex = ">=2022.0.0"
tqdm = ">=4.64.0"
FlagEmbedding = "*"
jieba = "*"
openai = ">=1.0.0"

# 머신러닝
scikit-learn = ">=1.0.0"

# PyTorch (CUDA 12.8) - 반드시 pip로 별도 설치
# 설치 명령: poetry run pip install torch==2.7.1+cu128 torchvision==0.22.1+cu128 torchaudio==2.7.1+cu128 --extra-index-url https://download.pytorch.org/whl/cu128
# 아래는 의존성 명시만, 실제 설치는 requirements.txt 참고
# torch = "2.7.1+cu128"
# torchvision = "0.22.1+cu128"
# torchaudio = "2.7.1+cu128"

# NLP 및 임베딩 패키지
spacy = ">=3.4.0"

# sa 전용
mecab-ko = ">=1.0.0"
mecab-ko-dic = ">=1.0.0"
mecab-python3 = ">=1.0.0"

# CUDA wheel robust 설치 안내 (필수)
# -----------------------------------
# CUDA 환경에서 PyTorch를 사용할 경우 아래 명령을 반드시 실행하세요:
# poetry run pip install torch==2.7.1+cu128 torchvision==0.22.1+cu128 torchaudio==2.7.1+cu128 --extra-index-url https://download.pytorch.org/whl/cu128
# -----------------------------------

[tool.poetry.group.dev.dependencies]
jupyter = "*"
ipykernel = "*"
matplotlib = "*"
seaborn = "*"
black = "*"
isort = "*"
pytest = "*"

[tool.poetry.scripts]
install-models = "scripts.install_models:main"
setup-mecab = "scripts.setup_mecab:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"